--- a/pong-game/Cargo.toml
+++ b/pong-game/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "pong_game"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+js-sys = "0.3"
 
 [dependencies.web-sys]
 version = "0.3"
