--- a/peerpong-worker/wrangler.jsonc
+++ b/peerpong-worker/wrangler.jsonc
@@ -3,23 +3,24 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
+	// "$schema": "node_modules/wrangler/config-schema.json",
 	"name": "peerpong-worker",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-07-09",
 	"migrations": [
 		{
 			"new_sqlite_classes": [
-				"MyDurableObject"
+				"GameRoom"
 			],
 			"tag": "v1"
 		}
 	],
 	"durable_objects": {
 		"bindings": [
-			{
-				"class_name": "MyDurableObject",
-				"name": "MY_DURABLE_OBJECT"
+			{	
+				"name": "GAME_ROOMS",
+				"class_name": "GameRoom",
+				"script_name": "peerpong-worker"
 			}
 		]
 	},
